# skill-engineering

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKLOG.md  FEATURE-MATRIX.md  PRODUCT.md  README.md  ROADMAP.md  TASK.md  VERSIONING.md  architecture.md  constitution.md  migration-from-agent-skill-hub.md
docs/adr/: 0001-self-hosted-lifecycle-governance.md  0002-v2-blueprint-ir-boundary.md  0003-canonical-skill-engineering-identity.md  0004-standard-skill-cli-install.md  0005-mit-license-and-installation-boundaries.md  0006-apache-2.0-attribution-and-brand-boundary.md  0007-simple-interactive-install-default.md  README.md
docs/guides/: licensing-and-installation.md  skill-authoring-standard.md  skill-doctor-standard.md  skill-evaluation-standard.md  skill-interaction-design.md  skill-maintenance-standard.md  skill-quality-score-standard.md  skill-self-evolution-standard.md  v1-compatibility.md
scripts/: check-release.py  credential-lint.sh
tests/: test_blueprint.py  test_cli.py  test_credential_lint.py  test_decision.py  test_doctor_wrapper.py  test_evaluation.py  test_evolution.py  test_global_install_smoke.py  test_interaction.py  test_journey.py  test_license_policy.py  test_maintenance.py  test_scaffold.py  test_security_analysis.py  test_skill_doctor.py  test_skill_engineering_feedback.py  test_skill_guide_feedback.py  test_skill_identity.py  test_skill_lint.py  test_standard_install_docs.py  test_v1_release.py
(+118 files in other folders)
