[project]
name = "skill-engineering"
version = "1.0.0"
description = "Evidence-driven engineering, evaluation, maintenance, and evolution for Agent Skills"
readme = "README.md"
requires-python = ">=3.10"
# SPDX-License-Identifier: Apache-2.0
license = { text = "Apache-2.0" }
authors = [{ name = "艾笑" }]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
skill-engineering = "skill_engineering.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_engineering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
